[FIX] Now the numbers in a table are vertically aligned

--- a/src/Components/BlockView.scss
+++ b/src/Components/BlockView.scss
@@ -19,7 +19,8 @@ td {
     //color: transparent;
     font-weight: 900;
     font-size: 21px;
-    padding-bottom: 7px;
+    padding-bottom: 3.5px;
+    padding-top: 3.5px;
     border-width: 3px;
     border-style: solid;
     border-color: black;
